2015-03-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix GLOB_DOOFFS initialization bug.

	* mingwex/glob.c (__mingw_glob) [!GLOB_DOOFFS]: Ensure...
	(gl_data->gl_offs): ...this is properly initialized to zero.

2014-12-28  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Tag all files for release of mingwrt-3.21.

	* include/_mingw.h: Adjust version accordingly.

2014-12-28  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Improve usage notes in stdlib.h, for mkstemp() function.

	* include/stdlib.h (MKSTEMP_SETMODE): Explain usage; this is a copy of
	an original comment, explaining the need to use  _O_TEMPORARY, from...
	* mingwex/mkstemp.c: ...here; delete trailing white space.

2014-12-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Eliminate some potential definition inconsistencies.

	* include/stdio.h: Cosmetic formatting change, relating to...
	* include/unistd.h (SEEK_SET, SEEK_CUR, SEEK_END): Define them
	unconditionally; this allows the compiler to check for consistency
	with their primary definitions in stdio.h

2014-12-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Suppress expected warning diagnostics in LIBIMPL builds.

	* Makefile.in (LIBIMPL_CFLAGS): Redefine it; it now incorporates...
	(LIBIMPL_EXTRA_CFLAGS): ...this new macro; it includes the requisite
	GCC flag to supress warnings relating to deprecated declarations.

2014-12-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Provide more POSIX conforming sleep() functions.

	* include/sys/types.h (useconds_t): Make it explicitly long; int may
	be okay, but doesn't guarantee enough bits; mark as deprecated, since
	POSIX has declared it "obsolete", and no longer specifies it.

	* mingwex/usleep.c: Delete file; it provided an implementation of...
	(usleep): ...this now obsolete function, claiming POSIX.1 issue 6, but
	its error handling was hopelessly broken; replace it with...
	* mingwex/nsleep.c: ...this new file; it implements...