@@ -1,3 +1,10 @@
+2015-05-08  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Correct improper unistd.h function attribute declarations.
+
+	* include/unistd.h (_cdecl): Correct usage throughout; should be...
+	(__cdecl): ...this.
+
 2015-03-12  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Fix GLOB_DOOFFS initialization bug.
